iFrame overflow fixed

--- a/src/global.css
+++ b/src/global.css
@@ -237,14 +237,15 @@
   display: flex;
   background-color: #193d44;
   justify-content:center ;
-  width: 98.8%;
-  border: 5px solid white;
+  width: 100%;
+ 
 }
 
 .game-list {
   display: flex;
   background-color: #193d44;
   justify-content:center ;
+  border: 7px solid white;
 }
 
 .game {
@@ -268,13 +269,14 @@
   justify-content: space-between;
   align-items: center;
   background-color: #e4f0f2;
-  width: 974.5px;
+  width: 100%;
   height: 43px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-left: 5px solid white;
-  border-right: 5px solid white;
+
   border-bottom: 5px solid white;
+}
+
+.coupons-info {
+  margin-left: 15px;
 }
 
 .go-my-coupons {
@@ -282,16 +284,17 @@
   padding: 5px 10px 5px 10px;
   font-size: small;
   font-weight: bold;
+  margin-right: 15px;
 }
 
 .cekilemez-bakiye-container {
   display: flex;
   align-items: center;
   background-color: white;
-  width: 994px;
+  width: 100%;
   height: 52px;
-  padding-left: 5px;
-  padding-right: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
   padding-top: 7px;
   padding-bottom: 13.5px;
 }
@@ -309,6 +312,13 @@
   width: 100%;
   height: 560px;
   background-color: #1e222e;
+  border: none;
+}
+
+.iFrame {
+  width:100%;
+  height:100%;
+  border: none;
 }
 
 .game-info-container {
